--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.20)
-project(LunaVoxalEngine VERSION 1.0 LANGUAGES C CXX)
+project(LunaVoxelEngine VERSION 1.0 LANGUAGES C CXX)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
@@ -12,7 +12,7 @@ set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 option(USE_WAYLAND "Use Wayland on Linux (otherwise X11)" OFF)
 option(ENABLE_MOBILE_PLATFORMS "Build for mobile platforms" OFF)
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
     add_compile_definitions(DEBUG)
 endif()
 
@@ -20,9 +20,18 @@ if(LINUX)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -nodefaultlibs -lc -fno-exceptions")
 endif()
 
+if(WIN32)
+    if(MSVC)
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc /D NOMINMAX")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /SUBSYSTEM:WINDOWS /ENTRY:WinMainCRTStartup")
+    else()
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-exceptions")
+    endif()
+endif()
+
 # Detect platform and set platform-specific variables
 if(WIN32)
-    set(PLATFORM_NAME "win32")
+    set(PLATFORM_NAME "windows")
     add_definitions(-DWIN32_LEAN_AND_MEAN)
     add_definitions(-DON_WINDOWS)
 elseif(APPLE)
@@ -44,34 +53,32 @@ else()
 endif()
 
 # Gather platform-specific source files
-file(GLOB PLATFORM_SOURCES
-    "src/platform/${PLATFORM_NAME}.*"
-    "src/platform/${PLATFORM_NAME}_*.*"
-    "src/platform/common_*.*"
+file(GLOB_RECURSE PLATFORM_SOURCES
+    "src/platform/${PLATFORM_NAME}_*.h"
+    "src/platform/${PLATFORM_NAME}_*.cpp"
+    "src/platform/common_*.h"
+    "src/platform/*.h"
+    "src/platform/common_*.cpp"
 )
 
 # Gather renderer sources
-file(GLOB RENDERER_SOURCES
-    "src/renderer/vulkan/*.h"
-    "src/renderer/vulkan/*.cpp"
-    "src/renderer/*.h" 
-    "src/renderer/*.cpp"
-    "src/renderer/third_party/volk/volk.cpp"
+file(GLOB_RECURSE RENDERER_SOURCES
+    "${CMAKE_SOURCE_DIR}/src/renderer/**/*.h"
+    "${CMAKE_SOURCE_DIR}/src/renderer/**/*.cpp"
 )
 
 # Gather main sources
 file(GLOB MAIN_SOURCES
-    "src/utils/string.h"
-    "src/utils/string.cpp"
-    "src/utils/algorithm.h"
+    "src/utils/*.h"
+    "src/utils/*.cpp"
 )
 
 # Platform-specific libraries
 if(WIN32)
-    set(PLATFORM_LIBS 
-        kernel32.lib 
-        user32.lib 
-        gdi32.lib 
+    set(PLATFORM_LIBS
+        kernel32.lib
+        user32.lib
+        gdi32.lib
         winmm.lib
     )
 elseif(LINUX)
@@ -87,23 +94,22 @@ elseif(LINUX)
         list(APPEND PLATFORM_LIBS ${XCB_LIBRARIES})
         list(APPEND PLATFORM_INCLUDES ${XCB_INCLUDE_DIR})
     endif()
-    
-    #broken see FindPipewire.cmake
-    #find_package(Pipewire REQUIRED)
-    #list(APPEND PLATFORM_LIBS ${PIPEWIRE_LIBRARIES})
-    
+
+    # broken see FindPipewire.cmake
+    # find_package(Pipewire REQUIRED)
+    # list(APPEND PLATFORM_LIBS ${PIPEWIRE_LIBRARIES})
     list(APPEND PLATFORM_LIBS pthread dl)
 elseif(APPLE)
     find_library(COCOA_LIBRARY Cocoa)
     find_library(METAL_LIBRARY Metal)
     find_library(AUDIO_LIBRARY AudioToolbox)
-    
-    list(APPEND PLATFORM_LIBS 
+
+    list(APPEND PLATFORM_LIBS
         ${COCOA_LIBRARY}
         ${METAL_LIBRARY}
         ${AUDIO_LIBRARY}
     )
-    
+
     list(APPEND PLATFORM_INCLUDES
         ${COCOA_INCLUDE_DIR}
         ${METAL_INCLUDE_DIR}
@@ -117,9 +123,9 @@ if(ENABLE_MOBILE_PLATFORMS)
         set(CMAKE_SYSTEM_NAME Android)
         set(CMAKE_SYSTEM_VERSION 28)
         set(ANDROID_ABI "arm64-v8a")
-        
-        list(APPEND PLATFORM_LIBS 
-            android 
+
+        list(APPEND PLATFORM_LIBS
+            android
             log
         )
     elseif(IOS)
@@ -136,18 +142,19 @@ add_executable(${PROJECT_NAME}
 )
 
 # Include directories
-target_include_directories(${PROJECT_NAME} PRIVATE 
-    "src/renderer/third_party/vk_headers/include"
-    "src/renderer/third_party/volk"
-    "src/renderer/third_party/vma/include"
+target_include_directories(${PROJECT_NAME} PRIVATE
+    "${CMAKE_SOURCE_DIR}/src/renderer/third_party/vk_headers/include"
+    "${CMAKE_SOURCE_DIR}/src/renderer/third_party/volk"
+    "${CMAKE_SOURCE_DIR}/src/renderer/third_party/vma/include"
     ${PLATFORM_INCLUDES}
-    src
+    "${CMAKE_SOURCE_DIR}/src"
 )
 
 # Link libraries
 target_link_libraries(${PROJECT_NAME}
     ${PLATFORM_LIBS}
 )
+
 if(LINUX OR APPLE)
     target_link_libraries(${PROJECT_NAME} pthread)
 endif()
